--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yammy-Anytime Anywhere Anybody</title>
+    
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.jpeg" type="image/x-icon">
@@ -62,7 +63,7 @@
                 <h4>most selling food this week</h4>
             </div>
             <div class="foodlist">
-                <div class="food-name">
+                <div class="food-name" style="padding:12px;">
                     <img src="img/destination1.jpg" alt="">
                     <div class="destination-content">
                         <h4>biriyani <span>chiken/mutton</span></h4>
@@ -71,7 +72,7 @@
                 </div>
                 <div class="food-name">
                     <img src="img/destination2.jpg" alt="">
-                    <div class="destination-content">
+                    <div class="destination-content" >
                         <h4>fried rice <span>veg/non veg</span></h4>
                         <a href=""><i class='bx bx-right-arrow-alt' ></i></a>
                     </div>
@@ -90,7 +91,7 @@
                         <a href=""><i class='bx bx-right-arrow-alt' ></i></a>
                     </div>
                 </div>
-                <div class="food-name">
+                <div class="food-name" style="padding-top: 12px;">
                     <img src="img/destination5.jpg" alt="">
                     <div class="destination-content">
                         <h4>edli dhosa <span>south indian</span></h4>
